feat: added names table for device names
